# pitchprompter-ai

./: .gitignore  DEPLOYMENT.md  FEEDBACK_FORM_TEMPLATE.md  LICENSE  README.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.md  ROADMAP.md  SECURITY.md  TESTING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
site/: README.md  index.html
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/src/: capture_exclusion.rs  main.rs  media_permissions.rs
src/components/: PrivacyBadge.tsx  Toast.tsx
src/features/practice/: PracticePage.tsx
src/features/prompter/: CameraLockPrompter.tsx  TeleprompterPage.tsx  VoiceFollowDebugPanel.tsx  launchCameraLock.ts  useVoiceFollow.ts  voiceAlign.ts  voiceFollowDebug.ts
src/features/scripts/: ScriptEditor.tsx  ScriptsPage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/ai/: AIProvider.ts  OpenAIProvider.ts  index.ts
src/lib/privacy/: analytics.ts  captureExclusion.ts
src/lib/speech/: BrowserSpeechProvider.ts  SpeechProvider.ts  StubWhisperProvider.ts  extractDelta.test.ts  index.ts
src/lib/storage/: repos.ts  storage.ts
src/styles/: global.css
