[package]
name = "pitchprompter-ai"
version = "0.1.0"
description = "Local-first AI teleprompter and speaking coach"
authors = ["PitchPrompter AI"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["http-request", "shell-open", "window-create", "window-close", "window-show", "window-hide", "window-set-always-on-top", "window-set-size", "window-set-position", "window-set-title", "window-set-decorations", "window-set-fullscreen", "window-set-focus", "window-start-dragging"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
